aadhar card reader added, import errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="mic_tap">Tap on mic to speak</string>
     <string name="generate_rec">Netflix and Chill</string>
     <string name="explanation">Explain NFC</string>
+    <string name="title_activity_scanner">Scan Card</string>
+    <string name="no_cards_to_show">No cards to show</string>
 </resources>
